# FinalSortVisualizer

./: CMakeLists.txt  README.md  main.cpp
Datasets/: Dataset.cpp  Dataset.h
MainApplication/: MainApplication.cpp  MainApplication.h
Screens/: StartScreen.cpp  StartScreen.h
Settings/: Settings.cpp  Settings.h
Sorter/: Sorter.cpp  Sorter.h
SwiftifySFML/: Application.cpp  Application.h  Container.cpp  Container.h  Enumerations.h  Screen.cpp  Screen.h  UIComponent.cpp  UIComponent.h
UIComponents/: UIComponents.cpp  UIComponents.h
